Fix iframe causing horizontal scroll

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -17,6 +17,10 @@ body {
   }
 }
 
+iframe {
+  max-width: 100%;
+}
+
 p {
   font-family: 'Spectral', serif;
 }
